--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,10 @@ entrypoints==0.3
 Flask==1.1.2
 itsdangerous==1.1.0
 mccabe==0.6.1
-numpy==1.20.2
 parso==0.7.0
 pywin32==227
 pyzmq==20.0.0
 QtPy==1.9.0
-scikit-learn==0.22.2
 scipy==1.6.2
 spyder==3.3.6
 spyder-kernels==0.5.2
@@ -21,3 +19,5 @@ webencodings==0.5.1
 Werkzeug==1.0.1
 wincertstore==0.2
 wrapt==1.12.1
+gunicorn
+requests
