--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ QDarkStyle==2.8.1
 QtPy==1.9.0
 scikit-learn==0.24.1
 seaborn==0.11.1
-sklearn==0.0
+sklearn
 terminado==0.9.3
 webencodings==0.5.1
 Werkzeug==1.0.1
